--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "fluent-ffmpeg": "^2.1.3",
     "image-size": "^1.1.1",
     "canvas": "^2.11.2",
-    "ffmpeg-static": "^5.2.0",
     "single-line-log": "^1.1.2"
   },
   "pkg": {
+    "assets": [
+      "!config.json",
+      "!image.jpg",
+      "!font.ttf"
+    ],
     "targets": [
       "node16-win-x64"
     ]
