优化生成图片逻辑

--- a/config.json
+++ b/config.json
@@ -4,8 +4,9 @@
   "videoDir": "video",
   "imageDir": "images",
   "watermarkFontSize": 190,
-  "watermarkX": "(w-tw)/2",
-  "watermarkY": "(h-th)/2",
+  "fillStyle": "#ff5a5d",
+  "xPosition": 0,
+  "yPosition": 0,
   "watermarkFontPath": "font.ttf",
   "ffmpegPath": "ffmpeg/bin/ffmpeg"
 }
